@@ -3,6 +3,7 @@
 * Fixed bookmarks creation & browsing problem
 * Fixed URL resolving (this also fixed bug with some catalogs created with calibre2opds)
 * Do not search on qumran sites with cyrillic patterns
+* Better network search
 
 ===== 1.9.5.5 (Feb 4, 2014) =====
 * Fixed preference activity on Android 2.* devices
